Fixed image links

--- a/labtoreport.html
+++ b/labtoreport.html
@@ -168,7 +168,7 @@
 <h1 id="processing-data">Processing Data</h1>
 <p>Let’s say that you’re an manufacturing engineer at a large diamond company, and you want to review diamond sales information your company has to obtain some insight into your product and perform cost analysis on the plant. To show how to process data, we’ll be using the <a href="https://www.kaggle.com/shivam2503/diamonds">‘Diamonds’ dataset from Kaggle</a>. This dataset contains approximately 50,000 separate diamond entries with info including their price, carat, cut quality, and physical dimensions.</p>
 <h1 id="data-visualization-with-matplotlib">Data Visualization with Matplotlib</h1>
-<p>Boxplot <img src="photos/boxplot.png" alt="Boxplot Visualization" /></p>
-<p>Regression <img src="photo/caratmodel.png" alt="Regression" /></p>
+<p>Boxplot <img src="./photos/boxPlot.png" alt="Boxplot Visualization" /></p>
+<p>Regression <img src="./photos/caratModel.png" alt="Regression" /></p>
 </body>
 </html>
