--- a/labtoreport.html
+++ b/labtoreport.html
@@ -154,21 +154,42 @@
 </header>
 <p><a href="index.html">Home</a></p>
 <h1 id="introduction-and-motivation">Introduction and Motivation</h1>
-<p>Scientists and engineers deal with data every day in their work. Whether it be test results from an experiment or data collected in the field, they are required to process data and present their analysis in a concise, clean format. This guide seeks to provide information on best practices for handling data in a lab or experiment all the way from data collection to the final report. To help demonstrate these techniques, some sample data will be provided and worked on at each step.</p>
+<p>Scientists and engineers deal with data every day in their work. Whether it be test results from an experiment or data collected in the field, they are required to process data and present their analysis in a concise, clean format. This guide seeks to provide information on best practices for handling data in a lab or experiment all the way from data collection to the final report. To help demonstrate these techniques, some sample data will be provided and worked on at each step. If you would like to follow the code along in Jupyter Labs, here is a <a href="./code/diamondBook.ipynb">link to the Jupyter Lab file</a> that I created. In addition, a PDF version can be viewed <a href="./code/diamondBook.pdf">here</a>.</p>
 <h1 id="python-information">Python Information</h1>
 <p>This article will use Python, a programming language created by Guido van Rossum. To get the most out of the article, it is recommended to follow along using a live version of Python. Python is a freely available programming language that can be obtained on all operating systems. Below is a list of resources to create a working install of Python on your respective operating system:</p>
 <ul>
 <li>Windows: Visit the <a href="https://www.python.org/downloads/windows">Python Releases for Windows</a> page of the Python website, and download the latest Python 3 release. At the time of this being written, it is Python 3.9.2.</li>
 <li>macOS: Visit the <a href="https://www.python.org/downloads/mac-osx/">Python Releases for Mac OS X</a> page of the Python website, and download the latest Python 3 release. At the time of this being written, it is Python 3.9.2.</li>
-<li>GNU/Linux: Most GNU/Linux installations come with Python installed by default. Consult the package manager installed on your distribution of GNU/Linux for more information.</li>
+<li>GNU/Linux: Most GNU/Linux installations come with Python installed by default. Consult the package manager installed on your distribution of GNU/Linux for more information. It should be noted that depending on the details of your distribution, cutting-edge versions of Python may not be available. Typically, this is the case on static release distributions like Debian and Ubuntu; whereas, rolling release distros such as Arch, Manjaro, and Artix Linux will have the newest version of Python. Your milage may vary here. It is not strictly necessary to have Python 3.9.2; however, I cannot guarantee that there won’t be version incompatability.</li>
 </ul>
+<p>For any installation, ensure that Python is added to PATH. PATH essentially maps a global command to your command prompt. Typically, if you were to access a program via the command line, you would need to drill down to the specific folder and run the file. With a PATH-mapped application, you are able to simply call it wherever you are in your file structure. It is necessary for applications like pip, the Python package manager, and Jupyter Labs, a convenient IDE (integrated development environment).</p>
+<p>On the graphical installers for Windows and Mac OS X, there should be a check box at the end of the installation that looks like this: <img src="./photos/pythonPATH.jpg" alt="PATH checkbox: courtesy of of https://pychill.info/about-pychill/" /></p>
+<p>After getting the PATH variable set up properly and Python installed, it is necessary for the following packages to be installed:</p>
+<ul>
+<li>numpy: This package adds better support for arrays and mathematical operations that can occur on arrays</li>
+<li>matplotlib: This package adds “MATLAB style” plotting to Python. It allows for high quality figures and graphical representations of data to be made.</li>
+<li>pandas: This package adds support for data frames, a type of data structure built with data and statistical analysis in mind.</li>
+<li>(OPTIONAL) jupyterlab: This package adds Jupyter Lab, a web-based IDE that is structured like a notebook. It allows for blocks of code to be run without needing to have the entire program working along in-line printing of figures. It is not a necessary package; however, the code attached at the top of the page was written as a Jupyter Notebook (the filetype Jupyter Labs uses).</li>
+</ul>
+<p>Using your command line, you can install these packages by entering the following command:</p>
+<pre><code>python3 -m pip install numpy matplotlib pandas</code></pre>
+<p>If you wish to also install Jupyter Labs, the command would look like this:</p>
+<pre><code>python3 -m pip install numpy matplotlib pandas jupyterlab</code></pre>
+<p>pip is the default package manager for Python. Essentially, this tells pip to fetch those packages and install them to your Python install. Once this is done, if you elected to install the <code>jupyterlab</code> package, type the following command to open up a Jupyer Notebook:</p>
+<pre><code>jupyter lab</code></pre>
+<p>This command will open a Jupyter Lab instance wherever the working directory of your command line is. If you’d like to work out of a specific folder, it is necessary to path there before running Jupyter Lab.</p>
+<p>With the necessary packages together, it’s time to start the process of taking data from the experiment or field to the report!</p>
 <h1 id="collecting-data">Collecting Data</h1>
 <p>One of the most important steps in an experiment is collecting data in a format that allows the experimenter to easily access and perform analysis on the data. In the days before computer tools for data processing, this took the form of pen and paper. While this style of data acquisition is simple and requires no technical knowledge whatsoever, it is unsuited for data sets of any appreciable size. There is a reason that writing sentences over and over in school was a punishment!</p>
 <p>With the advent of computers, gone are the days of needing to prep tables of data on paper. A CSV file, or comma separated value file, is a comma-delimited text document that is extensible across numerous programs. Spreadsheet programs such as Microsoft Excel, Google Sheets, LibreOffice Calc, and Apple Numbers are able to operate on these files while also being able to be edited from a text editor like Notepad or Vim.</p>
 <h1 id="processing-data">Processing Data</h1>
 <p>Let’s say that you’re an manufacturing engineer at a large diamond company, and you want to review diamond sales information your company has to obtain some insight into your product and perform cost analysis on the plant. To show how to process data, we’ll be using the <a href="https://www.kaggle.com/shivam2503/diamonds">‘Diamonds’ dataset from Kaggle</a>. This dataset contains approximately 50,000 separate diamond entries with info including their price, carat, cut quality, and physical dimensions.</p>
 <h1 id="data-visualization-with-matplotlib">Data Visualization with Matplotlib</h1>
-<p>Boxplot <img src="./photos/boxPlot.png" alt="Boxplot Visualization" /></p>
-<p>Regression <img src="./photos/caratModel.png" alt="Regression" /></p>
+<figure>
+<img src="./photos/boxPlot.png" alt="Boxplot Visualization" /><figcaption aria-hidden="true">Boxplot Visualization</figcaption>
+</figure>
+<figure>
+<img src="./photos/caratModel.png" alt="Regression" /><figcaption aria-hidden="true">Regression</figcaption>
+</figure>
 </body>
 </html>
