Fixed captioning issues

--- a/labtoreport.html
+++ b/labtoreport.html
@@ -163,10 +163,7 @@
 <li>GNU/Linux: Most GNU/Linux installations come with Python installed by default. Consult the package manager installed on your distribution of GNU/Linux for more information. It should be noted that depending on the details of your distribution, cutting-edge versions of Python may not be available. Typically, this is the case on static release distributions like Debian and Ubuntu; whereas, rolling release distros such as Arch, Manjaro, and Artix Linux will have the newest version of Python. Your milage may vary here. It is not strictly necessary to have Python 3.9.2; however, I cannot guarantee that there won’t be version incompatability.</li>
 </ul>
 <p>For any installation, ensure that Python is added to PATH. PATH essentially maps a global command to your command prompt. Typically, if you were to access a program via the command line, you would need to drill down to the specific folder and run the file. With a PATH-mapped application, you are able to simply call it wherever you are in your file structure. It is necessary for applications like pip, the Python package manager, and Jupyter Labs, a convenient IDE (integrated development environment).</p>
-<p>On the graphical installers for Windows and Mac OS X, there should be a check box at the end of the installation that looks like this:</p>
-<figure>
-<img src="./photos/pythonPATH.jpg" alt="PATH checkbox: courtesy of of https://pychill.info/about-pychill/" /><figcaption aria-hidden="true">PATH checkbox: courtesy of of https://pychill.info/about-pychill/</figcaption>
-</figure>
+<p>On the graphical installers for Windows and Mac OS X, there should be a check box at the end of the installation that looks like this: <img src="./photos/pythonPATH.jpg" title="PATH checkbox during install: courtesy of https://pychill.info/about-pychill/" /></p>
 <h2 id="python-packages">Python Packages</h2>
 <p>After getting the PATH variable set up properly and Python installed, it is necessary for the following packages to be installed:</p>
 <ul>
@@ -190,13 +187,9 @@
 <h2 id="getting-the-environment-set-up">Getting the environment set up</h2>
 <p>Let’s say that you’re an manufacturing engineer at a large diamond company, and you want to review diamond sales information your company has to obtain some insight into your product and perform cost analysis on the plant. To show how to process data, we’ll be using the <a href="https://www.kaggle.com/shivam2503/diamonds">‘Diamonds’ dataset from Kaggle</a>. This dataset contains approximately 50,000 separate diamond entries with info including their price, carat, cut quality, and physical dimensions. To get a copy of the data, create an account with Kaggle and download the CSV from the link.</p>
 <p>Create a folder somewhere on your hard disk that contains the previously mentioned CSV. You may also choose to place the iPython Notebook in there as well. Open a terminal (command prompt) and navigate to the folder that contains the CSV file and the notebook. Once you have done so, run <code>jupyter lab</code> to start a Jupyter Lab session. On the left, there should be a tabular view of the files in your current directory.</p>
-<figure>
-<img src="./photos/journalSelect.png" alt="Selection menu for Jupyter Lab" /><figcaption aria-hidden="true">Selection menu for Jupyter Lab</figcaption>
-</figure>
+<p><img src="./photos/journalSelect.png" title="Jupyter Lab Notebook" /></p>
 <p>Open the file with the .ipynb extension. You should now be greeted by code on the right. From left to right on the following figure, the basic controls for manipulating the notebook are as follows:</p>
-<figure>
-<img src="./photos/controls.png" alt="A photo of the controls at the top of the code section in a notebook" /><figcaption aria-hidden="true">A photo of the controls at the top of the code section in a notebook</figcaption>
-</figure>
+<p><img src="./photos/controls.png" title="Controls" /></p>
 <ul>
 <li>Save the file</li>
 <li>Create a new notebook</li>
@@ -208,11 +201,7 @@
 <li>Restart the Python kernel and run all cells t is sufficient enough run single cells at a time unless significant changes have occurred across cells. ## Code</li>
 </ul>
 <h1 id="data-visualization-with-matplotlib">Data Visualization with Matplotlib</h1>
-<figure>
-<img src="./photos/boxPlot.png" alt="Boxplot Visualization" /><figcaption aria-hidden="true">Boxplot Visualization</figcaption>
-</figure>
-<figure>
-<img src="./photos/caratModel.png" alt="Regression" /><figcaption aria-hidden="true">Regression</figcaption>
-</figure>
+<p><img src="./photos/boxPlot.png" title="Boxplot Visualization" /></p>
+<p><img src="./photos/caratModel.png" title="Regression Visualization" /></p>
 </body>
 </html>
