--- a/about.html
+++ b/about.html
@@ -154,11 +154,11 @@
 </header>
 <p>To the user,</p>
 <p>Thank you for taking interest in “The Engineer’s Guide to Leveraging the Personal Computer.” STEM undergraduate education is broad; as such, there are inevitably topics that slip through cracks of even the most well-structured curriculum. One such topic is the usage of computers to make every day STEM-related tasks easier. This website, and the articles contained within it, seek to provide quality information on such topics in a modular and accessible way.</p>
-<p>The entire website is and continues to be developed using simple markdown languages. Content is written to Markdown files and is then subsequently converted into HTML using Pandoc. This has the advantage that all content can be accessed in a system-agnostic format where the only requirement is an internet browser of choice, an inclusion in nearly every operating system.</p>
+<p>“The Engineer’s Guide” was and continues to be developed using simple markdown languages. Content is written to Markdown files and is then subsequently converted into HTML using Pandoc. This has the advantage that all content can be accessed in a system-agnostic format where the only requirement is an internet browser of choice, an inclusion in nearly every operating system. Markdown and HTML are both refreshingly lightweight in file size, allowing even the oldest of computer hardware to access article content with lightning-like speed.</p>
 <p>In addition, the content is hosted on GitHub under the GPL3 license, allowing users to download, clone, fork, and share the entire project. This setup is conductive to user modification and offline viewing. Another added benefit of the hosting medium is that users can also contribute directly to the live project via commits, allowing experienced users to share their knowledge or provide editorial support.</p>
 <p>Once again, I thank you for taking interest in the site. Computers are a underutilized tool not because they are incapable of work; rather, it is the case that users simply do not know what they are fully capable of and to what extent they can assist. If you have any questions about the project or want to know how to contribute, please feel free to contact the repository host or send an e-mail to WSUtechproject2021@protonmail.ch.</p>
 <p>Sincerely,</p>
 <p>Aron Powers</p>
-<p>Author</p>
+<p>Website Author</p>
 </body>
 </html>
