Changed main page

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
 <header id="title-block-header">
 <h1 class="title">The Engineer’s Guide to Leveraging the Personal Computer</h1>
 </header>
-<p>Welcome to <strong>The Engineer’s Guide to Leveraging the Personal Computer</strong>! Contained within this guide is information on computational tools to make the average engineering student’s job much easier. Before viewing the topics in this guide, it is recommended that the <a href="about.html">About</a> section is read. Happy hunting!</p>
+<p>Welcome to “The Engineer’s Guide to Leveraging the Personal Computer!” Contained within this guide is information on computational tools to make the average STEM students’ job much easier.</p>
+<p>Please read the <a href="about.html">About</a> section to learn more about what this website is about. Thank you for your time!</p>
 <h1 id="table-of-contents">Table of Contents</h1>
 <ul>
 <li><a href="about.html">About</a></li>
